--- a/core/src/main/res/values-b+es+419/strings.xml
+++ b/core/src/main/res/values-b+es+419/strings.xml
@@ -135,7 +135,7 @@
     <string name="add_user">Agregar usuario</string>
     <string name="quick_connect">Conexión rápida</string>
     <string name="pref_player_intro_skipper">Saltador de intros (Intro Skipper)</string>
-    <string name="pref_player_intro_skipper_summary">Requiere que el complemento Intro Skipper de jumoog esté instalado en el servidor</string>
+    <string name="pref_player_intro_skipper_summary">Requiere que el complemento Intro Skipper de ConfusedPolarBear esté instalado en el servidor</string>
     <string name="episode_name_with_end">%1$d-%2$d. %3$s</string>
     <string name="episode_name_extended_with_end">T%1$d:E%2$d-%3$d - %4$s</string>
     <string name="extra_info_summary">Mostrar información detallada de audio, video y subtítulos</string>
@@ -170,30 +170,4 @@
     <string name="app_language">Idioma de la aplicación</string>
     <string name="remove_server_address">Remover dirección del servidor</string>
     <string name="remove_server_address_dialog_text">¿Está seguro de remover el servidor con dirección %1$s</string>
-    <string name="no_servers_found">No se encontraron servidores</string>
-    <string name="pref_player_trickplay_summary">Muestra previsualizaciones cuando navega por la barra de progreso</string>
-    <string name="pref_player_trickplay">Trickplay</string>
-    <string name="picture_in_picture">Pantalla en pantalla</string>
-    <string name="picture_in_picture_gesture">Gesto de pantalla en pantalla</string>
-    <string name="picture_in_picture_gesture_summary">Use el botón Home o gesto para cambiar a pantalla en pantalla mientras se reproduce el video</string>
-    <string name="pref_player_gestures_seek_trickplay">Previsualizaciones al navegar en la barra de progreso</string>
-    <string name="trickplay">Trickplay</string>
-    <string name="player_start_maximized_summary">Abrir por defecto el vídeo en modo maximizado</string>
-    <string name="pref_player_chapter_markers">Marcadores de capítulo</string>
-    <string name="player_start_maximized">Iniciar maximizado</string>
-    <string name="no_users_found">No se encontraron usuarios</string>
-    <string name="select_user">Elija usuario</string>
-    <string name="live_tv">TV en vivo</string>
-    <string name="play">Reproducir</string>
-    <string name="watch_trailer">Ver trailer</string>
-    <string name="mark_as_played">Marcar como reproducido</string>
-    <string name="unmark_as_played">Desmarca como reproducido</string>
-    <string name="add_to_favorites">Agregar a favoritos</string>
-    <string name="remove_from_favorites">Quitar de favoritos</string>
-    <string name="collection_no_media">Ésta colección no contiene elementos</string>
-    <string name="pref_player_chapter_markers_summary">Muestra marcadores de capítulo en la barra de progreso</string>
-    <string name="pref_player_gestures_seek_trickplay_summary">Muestra previsualizaciones al navegar en la barra de progreso</string>
-    <string name="player_gestures_chapter_skip">Gesto para cambiar capítulos</string>
-    <string name="player_gestures_chapter_skip_summary">Toque prolongado en el lado izquierdo/derecho para saltar capítulos (sobreescribe el gesto de velocidad x2)</string>
-    <string name="sort_by_options_6">Aleatorio</string>
 </resources>
